Redo, add javascript
Basically rebuilt from scratch; added in java; still not complete site
but from now on want version I can revert to if I break something

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,8 +28,7 @@
 <!-- Links to CSS Stylesheets  -->
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600,700" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Quicksand" rel="stylesheet">
     <!-- Font Awesome for Icons -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -47,7 +46,7 @@
       <link rel="stylesheet" href="/css/specific.css">
 
 <!-- end stylesheets -->
-  
+
 
 <!-- Google Analytics -->
     <!-- paste your google analytics code here -->
