--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,13 +1,13 @@
-<header class="grid-middle">
-  <div class="col-6_sm-12">
-    <img class="logo" src="/images/demo-logo.png" alt="Brand Name Here">
+<header>
+  <div>
+    <h1 class="alpha">TRISH <span><br>MONTAINE</span></h1>
   </div>
-  <div class="col-6_sm-12 mob-hide">
+  <div class="fixed">
     <nav class="right">
       <a href="/index"> Home </a>
       <a href="/about"> About </a>
-      <a href="/blog"> Blog </a>
-      <a href="/shop"> Shop </a>
+      <a href="/archive"> Archive </a>
+      <a href="/shop"> Contact </a>
     </nav>
   </div>
 </header>
