--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,29 +1,6 @@
-<footer class="grid">
-
-  <!-- Column 1 -->
-  <div class="col-6_sm-12">
-    <img class="logo" src="/images/demo-logo.png" alt="Brand Name Here">
-    <p> This is a short description of my brand, which is really fucking awesome. You should probably recommend it to someone </p>
+<footer class="signup">
+  <h2>Want more Trish?</h2>
+  <div>
+    <p>TEXT BOX PLZ ADVISE</p>
   </div>
-
-  <!-- Column 2 -->
-  <div class="col-3_sm-6_xs-12">
-    <nav>
-      <a href="/index"> Home </a>
-      <a href="/about"> About </a>
-      <a href="/blog"> Blog </a>
-      <a href="/shop"> Shop </a>
-    </nav>
-  </div>
-
-  <!-- Column 3 -->
-  <div class="col-3_sm-6_xs-12">
-    <nav class="social-nav">
-      <!-- add your social links here -->
-      <a href="#"> <i class="fa fa-facebook"></i>Facebook </a>
-      <a href="#"> <i class="fa fa-instagram"> </i>Instagram</a>
-      <a href="#"> <i class="fa fa-twitter"></i>Twitter</a>
-    </nav>
-  </div>
-
 </footer>
